# claude-answers

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
docs/audits/: 2026-07-01-initial-audit.md
src/: error.rs  lib.rs  main.rs  query.rs  transcript.rs
tests/: query.rs  transcript.rs
tests/home/.claude/projects/-w/: session-11112222.jsonl
