[package]
name         = "claude-answers"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/claude-answers"
description  = "Recall your answers to Claude Code's questions from session transcripts"

[lib]
name = "claude_answers"
path = "src/lib.rs"

[[bin]]
name = "claude-answers"
path = "src/main.rs"

[dependencies]
nota = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
